--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,4 +22,14 @@
         android:layout_margin="16dp"
         android:src="@drawable/ic_add" />
 
+    <androidx.appcompat.widget.SwitchCompat
+        android:id="@+id/layoutSwitch"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|start"
+        android:layout_margin="30dp"
+        android:fontFamily="sans-serif-smallcaps"
+        android:textColor="@color/white"
+        android:text="Linear/Grid " />
+
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
