added todo for timed delay on color change

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <activity
         android:id="@+id/mainActivity"
-        android:name="com.stephenw.rvnum.main.MainActivity"
+        android:name="com.stephenw.rvnum.main.ui.views.MainActivity"
         android:label="activity_main"
         tools:layout="@layout/activity_main" />
 </navigation>
